[JDK17] Add module exports for ButterKnifeProcessor
BazelTestRunner starts separate gradle process with own jvm options.
Add nessesary --add-exports parameters for benchmark to continue to work
on jdk17 runtime.

Fixes: 242880564
Test: manually tested with tools/base/bazel/bazel test --java_runtime_version=jdk17 --config=jdk17  --test_output=streamed -- //prebuilts/studio/buildbenchmarks:Plaid_buildscriptUpdate_singleWarmupTest
Change-Id: I7cc5cffef5d87dc63ca3d69d396ec9417efa90b0